objects/adapps__OptimizerPlus_Admin_Perm_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Admin_Id__c</fullName>
        <label>Admin Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Admin_Name__c</fullName>
        <label>Admin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Admin_Username__c</fullName>
        <label>Admin Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Administrator_Permissions__c</fullName>
        <label>Administrator Permissions</label>
        <referenceTo>adapps__OptimizerPlus_Admin_Perm__c</referenceTo>
        <relationshipLabel>Administrator Permissions Item</relationshipLabel>
        <relationshipName>Administrator_Permissions_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Administrator Permissions Item</label>
    <nameField>
        <label>Administrator Permissions Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administrator Permissions Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>